watershed-kernel/tests/compile_fail/construct_merge_from_distributary.stderr
error[E0451]: fields `id` and `deposit` of struct `Merge` are private
 --> $WORKSPACE/tests/compile_fail/construct_merge_from_distributary.rs
  |
  |     let _merge = Merge {
  |                  ----- in this type
  |         id: "merge-run-1".to_owned(),
  |         ^^ private field
  |         deposit,
  |         ^^^^^^^ private field
